--- a/notas_laplace.tex
+++ b/notas_laplace.tex
@@ -1714,7 +1714,7 @@ Se $F(s)$ é a transformada de Laplace de uma função $f(t)$ de ordem exponenci
  \end{equation} 
 
 
- 
+ teste
 
 \end{document}
   
