--- a/notas_fourier.tex
+++ b/notas_fourier.tex
@@ -75,7 +75,228 @@ $$A_n\cos(w_nt-\phi_n)=\underbrace{A\cos(\phi_n)}_{a_n}\cos(w_nt)+\underbrace{A\
 $$f(t)=A_0+\sum_{n=1}^\infty A_n\cos(w_nt-\phi_n)$$
 
 {\bf Obs:} Para qualquer par $a_n$ e $b_n$, existem $A_n$ e $\phi_n$ que satisfazem a identidade e $A_n>0,~~\forall n>0$.
-\subsection{Forma complexa}
+
+\subsection{Forma complexa ou exponencial}
+\section{Forma exponencial}
+A forma exponencial de uma série de Fourier é obtida quando se substiuem as funções trigonométricas $\sen(w_nt)$ e $\cos(w_nt)$ por suas representações em termos de exponenciais complexos, isto é
+\begin{equation}\cos(w_nt)=\frac{e^{iw_nt}+ e^{-iw_nt}}{2}~~~\hbox{e}~~~\sen(w_nt)=\frac{e^{iw_nt}- e^{-iw_nt}}{2i}\end{equation}
+\begin{eqnarray*}
+f(t)&=&\frac{a_0}{2}+\sum_{n=1}^\infty a_n\cos(w_n t)+\sum_{n=1}^\infty b_n\sen(w_n t)\\
+&=&\frac{a_0}{2}+\sum_{n=1}^\infty a_n\left(\frac{e^{iw_nt}+ e^{-iw_nt}}{2}\right)+\sum_{n=1}^\infty b_n\left(\frac{e^{iw_nt}- e^{-iw_nt}}{2i}\right)\\
+\end{eqnarray*}
+Reagrupando os termos e usando o fato que $\frac{1}{i}=-i$, temos:
+\begin{eqnarray}\label{form_exp_1}
+f(t)=\frac{a_0}{2}+\sum_{n=1}^\infty \frac{a_n-ib_n}{2}e^{iw_nt}+\sum_{n=1}^\infty \frac{a_n+ib_n}{2}e^{-iw_nt}
+\end{eqnarray}
+Agora observamos que as definições \ref{coef} dadas por  
+\begin{eqnarray*}
+   a_0&=& \frac{2}{T}\int_0^T f(t)dt = \frac{2}{T}\int_{-T/2}^{T/2} f(t)dt\\
+   a_n&=& \frac{2}{T}\int_0^T f(t)\cos(w_n t)dt = \frac{2}{T}\int_{-T/2}^{T/2} f(t)\cos(w_nt)dt\\
+   b_n&=& \frac{2}{T}\int_0^T f(t)\sen(w_n t)dt = \frac{2}{T}\int_{-T/2}^{T/2} f(t)\sen(w_nt)dt
+  \end{eqnarray*}
+Embora estas expressões estejam definadas apenas para $n>0$, elas fazem sentidos para qualquer $n$ inteiro. Neste caso, valem as seguintes identidades:
+\begin{equation}a_{-n}=a_n,~~b_{-n}=-b_{n}~~b_0=0.\end{equation}
+onde se usou que $w_{-n}=\frac{2\pi (-n)}{T}=-\frac{2\pi n}{T}=-w_n$ e a paridade das funções cosseno e seno.
+Estendendo estas definições para qualquer inteiro, introduzimos os coeficientes $C_n$ dados por:
+\begin{equation}\label{def_cn}
+C_n = \frac{a_n - ib_n}{2}
+\end{equation}
+Observe que estes coeficientes estão definidos para para número inteiro $n$, assim temos:
+\begin{equation}
+C_0 = \frac{a_0 - ib_0}{2}=\frac{a_0}{2}
+\end{equation}
+e
+\begin{equation}
+C_{-n} = \frac{a_{-n} - ib_{-n}}{2}=\frac{a_{n} + ib_{n}}{2}
+\end{equation}
+Substituindo estas expressões para $C_0$, $C_{n}$ e $C_{-n}$ em (\ref{form_exp_1}), obtemos:
+\begin{eqnarray*}
+f(t)=C_0+\sum_{n=1}^\infty C_n e^{iw_nt}+\sum_{n=1}^\infty C_{-n}e^{-iw_nt}
+\end{eqnarray*}
+Escrevemos agora esta última expressão em um único somatório:
+ \begin{eqnarray}\label{forma_exp}
+ f(t)=\sum_{n=-\infty}^\infty C_n e^{iw_nt}
+ \end{eqnarray}
+ onde se usou que $w_{-n}=\frac{2\pi (-n)}{T}=-\frac{2\pi n}{T}=-w_n$
+ Observamos também que os coeficientes $C_n$ podem ser escritos das seguinte forma mais enxuta:
+ \begin{eqnarray*}
+ C_n &=& \frac{a_n - ib_n}{2}\\
+ &=& \frac{1}{T}\int_0^Tf(t)\left[\cos(w_n t)-i\sen(w_n t)\right]dt\\
+ &=&\frac{1}{T}\int_0^Tf(t)e^{-iw_nt}dt =\frac{1}{T}\int_{-T/2}^{T/2}f(t)e^{-iw_nt}dt 
+ \end{eqnarray*}
+
+
+\subsection{Convegência}
+(Teorema de Dirichlet( Seja $f$ uma função periódica de período $T$, suave por partes e descontínua no máximo em um número finito de saltos dentro de cada intervalo, então a série de Fourier converge em cada ponto $t$ para
+\begin{equation}
+\frac{f(t+)+f(t-)}{2},
+\end{equation}
+onde $f(t+)$ e $f(t-)$ são os limites laterais à direita e à esquerda, respectivamente. Observe que nos pontos $t$ onde $f(t)$ é contínua, então $f(t+)=f(t-)$ e a série de Fourier converge para $f(t)$.
+
+ 
+\subsection{Interlúdio - Caculando coeficientes}
+
+{Obs:}
+
+Se $f(t)$ é $T$-periódica, então:
+$$\int_0^T f(t)dt = \int_{a}^{T+a}f(t)dt,~~~\forall a \in \mathbb{R}$$
+
+Considere a fução periódica da por:
+
+ Seja $f(t)$ uma função dada por
+ \begin{eqnarray*}
+ f(t)&=&|t|, \ \ -1\leq t<1\\
+ f(t+2)&=&f(t),\ \ \forall t\in\mathbb{R}.
+ \end{eqnarray*}
+ Essa função é suave por partes e contínua em todos os pontos. Portanto se aplica o teorema:
+ \begin{center}
+ \includegraphics{figs/cap_series_figura_1}\end{center}
+ Observamos que essa é uma função par, ou seja, $f(t)=f(-t)$. A fim de explorar essa simetria, utilizaremos as fórmulas (\ref{coef}) envolvendo integrais simétricas, isto é,
+   \begin{eqnarray*}
+    a_0&=& \frac{2}{T}\int_{-T/2}^{T/2} f(t)dt\\
+    a_n&=&  \frac{2}{T}\int_{-T/2}^{T/2} f(t)\cos(w_nt)dt\\
+    b_n&=&\frac{2}{T}\int_{-T/2}^{T/2} f(t)\sen(w_nt)dt
+   \end{eqnarray*}
+ onde $T=2$ e $w_n=\frac{2\pi n}{T}=\pi n$. Logo,
+   \begin{equation*}
+    a_0= \int_{-1}^{1} |t| dt=2\int_{0}^{1} t dt=2\left[\frac{t^2}{2}\right]_0^1=1\\
+ 	\end{equation*}
+ 	\begin{eqnarray*}
+    a_n=  \int_{-1}^{1} |t|\cos(\pi n t)dt&=&2 \int_{0}^{1} t\cos(\pi n t)dt\\&=&2\left[\frac{t\sen(\pi n t)}{\pi n}\right]_0^1-2\int_0^1\frac{\sen(\pi n t)}{\pi n}dt\\
+ 	&=&2\left[\frac{t\sen(\pi n t)}{\pi n}+\frac{\cos(\pi n t)}{\pi^2 n^2}\right]_0^1=2\frac{(-1)^n-1}{\pi^2n^2}\\
+ 	 \end{eqnarray*}
+ 	\begin{eqnarray*}
+    b_n&=&\int_{-1}^{1} |t|\sen(\pi n t)dt=0.
+   \end{eqnarray*}
+ onde se usou que $|t|$, $|t|\cos(\pi n t)$ são funções pares em $t$ e $|t|\sen(\pi n t)$ é ímpar em $t$. Assim, temos
+ \begin{equation}
+ f(t)=\frac{1}{2}-\frac{4}{\pi^2}\left(\cos(\pi t)+\frac{1}{3^2}\cos(3\pi t)+\frac{1}{5^2}\cos(5\pi t)+\cdots\right)
+ \end{equation}
+ Observe que, quando $t=0$, obtemos como subproduto da série de Fourier da $f(t)$ a soma da seguinte série numérica:
+ \begin{equation}\label{serie_inv_impar}
+ 1+\frac{1}{3^2}+\frac{1}{5^2}+\cdots=\frac{\pi^2}{8}.
+ \end{equation}
+ A figura \ref{fig_conv_triangular} apresenta os gráficos da série que representa a função $f(t)$ com um termo, dois termos e três termos.
+ \begin{figure}[!ht]
+ \begin{center}
+ \includegraphics{figs/cap_series_figura_2}\end{center}
+ \caption{\label{fig_conv_triangular}Gráficos de $f_0(t)=\frac{1}{2}$ (azul), $f_1(t)=\frac{1}{2}-\frac{4}{\pi^2}\cos(\pi t)$ (verde) e $f_2(t)=\frac{1}{2}-\frac{4}{\pi^2}\left(\cos(\pi t)+\frac{1}{3^2}\cos(3\pi t)\right)$ (vermelho).}
+ \end{figure}
+
+ {\bf Onda quadrada}
+
+ Seja $g(t)$ uma função dada por
+ \begin{eqnarray*}
+ g(t)&=&-1, \ \ -1< t<0\\
+ g(t)&=&0, \ \ t=0\ \hbox{ou}\ t=1\\
+ g(t)&=&1, \ \ 0< t<1\\
+ g(t+2)&=&g(t),\ \ \forall t\in\mathbb{R}.
+ \end{eqnarray*}
+ Essa função é suave por partes e contínua em todos os pontos exceto por saltos nos inteiros, onde a função vale a média aritmética dos limites laterais. Portanto se aplica o teorema \ref{teo_Dirichlet}.
+ \begin{figure}[!ht]
+ \begin{center}
+ \includegraphics{figs/cap_series_figura_3}\end{center}
+ \end{figure}
+ Observamos que essa é uma função ímpar, ou seja, $f(t)=-f(-t)$. Novamente, utilizaremos as fórmulas (\ref{coef}) envolvendo integrais simétricas:
+   \begin{equation*}
+    a_0= \int_{-1}^{1} g(t) dt=0\\
+ 	\end{equation*}
+ 	\begin{eqnarray*}
+    a_n=  \int_{-1}^{1} g(t)\cos(\pi n t)dt=0\\
+ 	 \end{eqnarray*}
+ 	\begin{eqnarray*}
+    b_n=\int_{-1}^{1} g(t)\sen(\pi n t)dt=2\int_{0}^{1} g(t)\sen(\pi n t)dt&=&2\int_{0}^{1} \sen(\pi n t)dt\\
+ 	&=&\frac{2}{\pi n}\left[-\cos(\pi n t)\right]_0^1=2\frac{1-(-1)^n}{\pi n}
+   \end{eqnarray*}
+
+    Logo,
+ \begin{equation}
+ g(t)=\frac{4}{\pi}\left(\sen(\pi t)+\frac{1}{3}\sen(3\pi t)+\frac{1}{5}\sen(5\pi t)+\cdots\right).
+ \end{equation}
+ A figura \ref{fig_conv_quadrangular} apresenta os gráficos da série que representa a função $g(t)$ com um termo, dois termos, três termos e quatro termos.
+ \begin{figure}[!ht]
+ \begin{center}
+ \includegraphics{figs/cap_series_figura_4}\end{center}
+ \caption{\label{fig_conv_quadrangular}Gráficos de $g_0(t)=\frac{4}{\pi}\sen(\pi t)$ (azul), $g_1(t)=\frac{4}{\pi}\left(\sen(\pi t)+\frac{1}{3}\sen(3\pi t)\right)$ (verde), $g_2(t)=g(t)=\frac{4}{\pi}\left(\sen(\pi t)+\frac{1}{3}\sen(3\pi t)+\frac{1}{5}\sen(5\pi t)\right)$ (vermelho) e $g_3(t)=g(t)=\frac{4}{\pi}\left(\sen(\pi t)+\frac{1}{3}\sen(3\pi t)+\frac{1}{5}\sen(5\pi t)+\frac{1}{7}\sen(7\pi t)\right)$ (preto).}
+\end{figure}
+
+{\bf Exemplo} Seja $h(t)$ uma função dada por
+ \begin{eqnarray*}
+ f(t)&=&t, \ \ 0<t<1\\
+ f(t)&=&\frac{1}{2}, \ \ t=1\\
+ f(t+1)&=&f(t),\ \ \forall t\in\mathbb{R}.
+ \end{eqnarray*}
+ Essa função é suave por partes e contínua exceto por salto nos inteiros onde $h(t)$ assume o valor médio dos limites laterais. Portanto se aplica o teorema \ref{teo_Dirichlet}.
+ \begin{figure}[!ht]
+ \begin{center}
+ \includegraphics{figs/cap_series_figura_5}\end{center}
+ \end{figure}
+ Utilizaremos as fórmulas (\ref{coef}) envolvendo integrais no intervalo $[0,1]$, isto é,
+   \begin{equation*}
+    a_0= 2\int_{0}^{1} t dt=2\left[\frac{t^2}{2}\right]_0^1=1\\
+ 	\end{equation*}
+ 	\begin{eqnarray*}
+    a_n=  2\int_{0}^{1} t\cos(2 \pi n t)dt=&=&2\left[\frac{t\sen(2 \pi n t)}{2 \pi n}\right]_0^1-2\int_0^1\frac{\sen(2 \pi n t)}{2 \pi n}dt\\
+ 	&=&2\left[\frac{t\sen(2 \pi n t)}{2 \pi n}+\frac{\cos(2 \pi n t)}{4\pi^2 n^2}\right]_0^1=0\\
+ 	 \end{eqnarray*}
+ 	\begin{eqnarray*}
+    b_n=  2\int_{0}^{1} t\sen(2 \pi n t)dt=&=&2\left[-\frac{t\cos(2 \pi n t)}{2 \pi n}\right]_0^1+2\int_0^1\frac{\cos(2 \pi n t)}{2 \pi n}dt\\
+ 	&=&2\left[-\frac{t\cos(2 \pi n t)}{2 \pi n}+\frac{\sen(2 \pi n t)}{4\pi^2 n^2}\right]_0^1=-\frac{1}{\pi n}\\
+ 	 \end{eqnarray*}
+ Logo,
+ \begin{equation}
+ h(t)=\frac{1}{2}-\frac{1}{\pi}\left(\sen(2 \pi t)+\frac{1}{2}\sen(4\pi t)+\frac{1}{3}\sen(6\pi t)+\cdots\right).
+ \end{equation}
+
+ 
+ {\bf Obs:} Os coeficiente $b_n$ da série de Fourier de uma função par são nulos bem como os coeficiente $a_n$ da série de Fourier de uma função ímpar também o são.
+
+Demonstre a observação .
+
+
+
+
+
 \subsection{Diagramas de espectro}
 
+
+Diagramas espectro são representações gráficas dos coeficientes de Fourier $C_n$ associados a uma função periódica $f(t)$. Como os coeficientes $C_n$ são números complexos, é comum representá-los na forma de módulo e fase, isto é:
+ \begin{equation}C_n = |C_n|e^{i\phi_n}.\end{equation}
+ O ângulo de fase assim definido coincide com o conceito de argumento do número $C_n$.
+
+ {\bf Exemplo:} A função 
+ \begin{equation}f(t)=-1+2\cos(t)+4\sen(2t)\end{equation}
+ é periódica com periodo fundamental $2\pi$ e pode ser escrita na forma exponencial da seguinte forma:
+ \begin{eqnarray*}
+ f(t)&=&-1+2\left(\frac{e^{it}+e^{-it}}{2}\right)+4\left(\frac{e^{2it}-e^{-2it}}{2i}\right)\\
+ &=&2i e^{-2it} + e^{-it}-1+e^{it}- 2ie^{2it}
+ \end{eqnarray*}
+ Assim, identificamos cinco coeficientes não nulos:
+ \begin{equation*}
+ \begin{array}{lclcll}
+  C_{-2}&=&2i=2e^{\frac{i\pi}{2}} &\Longrightarrow& |C_{-2}|=2, ~~ &\phi_{-2}=\frac{\pi}{2}\\
+  C_{-1}&=&1 &\Longrightarrow& |C_{-1}|=1, ~~ &\phi_{-1}=0\\
+  C_{0}&=&-1=1e^{\pi} &\Longrightarrow& |C_{0}|=1, ~~ &\phi_0=\pi\\
+  C_{1}&=&1 &\Longrightarrow& |C_{1}|=1, ~~ &\phi_1=0\\
+  C_{2}&=&-2i=2e^{\frac{-i\pi}{2}} &\Longrightarrow& |C_{2}|=2, ~~ &\phi_2=-\frac{\pi}{2}
+ \end{array}
+  \end{equation*}
+ Os digramas de espectro de amplitude e fase são dados a seguir:
+ \begin{figure}[!ht]
+ \includegraphics{figs/cap_diagramas_espectro_figura_2}
+ \includegraphics{figs/cap_diagramas_espectro_figura_3}
+ \end{figure}
+
+ 
+{\bf Exemplo:} As primeiras raias do digrama de espectro da função a seguir: 
+ \begin{equation}
+ g(t)=\cdots+\frac{2i}{5\pi}e^{-5i\pi t}+\frac{2i}{3\pi}e^{-3i\pi t}+\frac{2i}{\pi}e^{-i\pi t}-\frac{2i}{\pi}e^{i\pi t}-\frac{2i}{3\pi}e^{3i\pi t}-\frac{2i}{5\pi}e^{5i\pi t}-\cdots,
+ \end{equation}
+ são dados na figura a seguir
+ \begin{figure}[!ht] 
+ \includegraphics{figs/cap_diagramas_espectro_figura_4}
+ \includegraphics{figs/cap_diagramas_espectro_figura_5}
+ \end{figure}
+
+ 
 \end{document}
