--- a/notas_fourier.tex
+++ b/notas_fourier.tex
@@ -4,6 +4,7 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{url}
+\usepackage[rmargin=1cm, lmargin=1cm]{geometry}
 
 \newcommand{\sen}{\operatorname{sen}\,}
 \newcommand{\senh}{\operatorname{senh}\,}
@@ -470,4 +471,436 @@ Seja $g(t)$ um função dada no exemplo \ref{ex_quadrada}, isto é,
  \end{eqnarray*}
 
  \chapter{23 de outubro}
-\end{document}
+  \section{Forma trigonométrica}
+ A forma exponencial da transformada de Fourier de uma função $f(t)$ foi definida no capítulo \ref{trans_Fourier} e é dada por
+ \begin{equation}
+ F(w)=\mathcal{F}\{f(t)\}=\int_{-\infty}^\infty f(t)e^{-iwt}dt.
+ \end{equation}
+ Se $f(t)$ é uma função real, então podemos separar a parte real e imaginária da transformada de Fourier, conforme a seguir:
+ \begin{eqnarray*}
+ F(w)&=&\mathcal{F}\{f(t)\}=\int_{-\infty}^\infty f(t)e^{-iwt}dt\\
+ &=&\int_{-\infty}^\infty f(t)\left(\cos(wt)-i\sen(wt)\right)dt\\
+ &=&\int_{-\infty}^\infty f(t)\cos(wt)dt-i\int_{-\infty}^\infty f(t)\sen(wt) dt\\
+ &:=&A(w)-iB(w),
+ \end{eqnarray*}
+ onde
+ \begin{eqnarray*}
+ A(w)&=&\int_{-\infty}^\infty f(t)\cos(wt)dt\\
+ B(w)&=&\int_{-\infty}^\infty f(t)\sen(wt) dt
+ \end{eqnarray*}
+ Nesses termos, a função $f(t)$ pode ser escrita como:
+ \begin{eqnarray*}
+ f(t)&=&\frac{1}{2\pi}\int_{-\infty}^\infty F(w)e^{iwt}dw\\
+ &=&\frac{1}{2\pi}\int_{-\infty}^\infty \left(A(w)-i B(w)\right)\left(\cos(wt)+i\sen(wt)\right)dw\\
+ &=&\frac{1}{2\pi}\int_{-\infty}^\infty\left( A(w)\cos(wt)+ B(w)\sen(wt)\right)dw\\&+&\frac{i}{2\pi}\int_{-\infty}^\infty \left(A(w)\sen(wt)- B(w)\cos(wt)\right)dw
+ \end{eqnarray*}
+ Usando o fato que $A(w)$ é uma função par e $B(w)$ é uma função ímpar, temos:
+ \begin{eqnarray*}
+ f(t)&=&\frac{1}{2\pi}\int_{-\infty}^\infty\left(A(w)\cos(wt)+ B(w)\sen(wt)\right)dw\\
+ &=&\frac{1}{\pi}\int_{0}^\infty\left( A(w)\cos(wt)+ B(w)\sen(wt)\right)dw
+ \end{eqnarray*}
+ A tabela abaixo compara as formas trigonométrica e exponencial das séries e transformadas de Fourier
+ \begin{equation}
+ \begin{array}{|c|c|c|}
+ \hline &&\\
+ &\hbox{Forma exponencial}&\hbox{Forma trigonométrica}\\&&\\  \hline &&\\
+ \hbox{Série de Fourier}&\displaystyle f(t)=\sum_{n=-\infty}^\infty C_n e^{i w_n t} & \displaystyle  f(t)=\frac{a_0}{2}+\sum_{n=1}^\infty\left( a_n \cos(w_nt)+b_n\sen(w_nt)\right)   \\&&\\\hline &&\\
+ \hbox{Transformada de Fourier} &\displaystyle f(t)=\frac{1}{2\pi}\int_{-\infty}^\infty F(w)e^{iwt}dw &\displaystyle f(t)=\frac{1}{\pi}\int_{0}^\infty \left( A(w)\cos(wt)+ B(w)\sen(wt)\right)dw \\   &&\\\hline
+ \end{array}
+ \end{equation}
+
+ {\bf Exemplo:} Considere a função $f(t)=e^{-at}u(t)$ onde $a$ é uma constante positiva e $u(t)$ é a função Heaviside. A transformada de Fourier $F(w)$ de $f(t)$ foi calculada como exercício e é dada por:
+ \begin{equation*}
+ F(w)=\frac{a}{a^2+w^2}-\frac{iw}{a^2+w^2}.
+ \end{equation*}
+ Usando representação trigonométrica da transformada de Fourier, temos:
+ \begin{eqnarray*}
+ f(t)=\frac{1}{\pi}\int_{0}^\infty\left( A(w)\cos(wt)+ B(w)\sen(wt)\right)dw,
+ \end{eqnarray*}
+ onde
+ \begin{eqnarray*}
+ A(w)&=&\frac{a}{a^2+w^2}\\
+ B(w)&=&\frac{w}{a^2+w^2}
+ \end{eqnarray*}
+
+ 
+ \section{Diagramas de espectro}
+Diagrama de espectro da transformada de Fourier é a representação gráfica da transformada de Fourier $F(w)$ associadas a uma função $f(t)$. Da mesma forma como o diagrama de espectro da série de Fourier se divide em amplitude e fase, o diagrama de espectro da transformada de Fourier se divide em magnitude e fase. Ou seja, o gráfico de $|F(w)|$ é a diagrama de magnitude e o gráfico de $\phi(w)$ é o diagrama de fase, onde
+\begin{equation}
+F(w)=|F(w)|e^{i\phi(w)},
+\end{equation}
+Já calculamos a transformada de Fourier da função $f(t)=e^{-|t|}$:
+ \begin{equation}
+ F(w)=\frac{2}{w^2+1}.
+ \end{equation}
+ O gráfico da magnitude $|F(w)|$ é dado na figura. Devido o fato de $F(w)$ ser real, a fase é uma função nula.
+ \begin{figure}[!ht]
+ \begin{center}
+ \includegraphics{figs/cap_diagramas_espectro_transformada_figura_1}\end{center}
+ \end{figure}
+
+A transformada de Fourier da função $f(t)=e^{-at}u(t)$ onde $a$ é uma constante positiva e $u(t)$ é a função Heaviside é dado por: 
+ \begin{equation*}
+ F(w)=\frac{a}{a^2+w^2}-\frac{iw}{a^2+w^2}.
+ \end{equation*}
+ Observe que
+ \begin{eqnarray*}
+ |F(w)|&=&\sqrt{\left(\frac{a}{a^2+w^2}\right)^2+\left(\frac{w}{a^2+w^2}\right)^2}\\
+ &=&\sqrt{\frac{a^2+w^2}{\left(a^2+w^2\right)^2}}\\&=&\frac{1}{\sqrt{a^2+w^2}}
+ \end{eqnarray*}
+ e, como $a>0$, temos $\frac{a}{a^2+w^2}>0$. Portanto,
+ \begin{equation}
+ \phi(w)=\tan^{-1}\left(\frac{-\frac{w}{a^2+w^2}}{\frac{a}{a^2+w^2}}\right)=-\tan^{-1}\left(\frac{w}{a}\right).
+ \end{equation}
+ A figura \ref{diag_espec_trans_2} apresenta o diagrama de espectro de magnitude e fase da transformada $F(w)$ de $f(t)$ quando $a=1$.
+  \begin{figure}[!ht]
+  \begin{center}
+  \includegraphics{figs/cap_diagramas_espectro_transformada_figura_2}
+  \includegraphics{figs/cap_diagramas_espectro_transformada_figura_3}\end{center}
+  \caption{\label{diag_espec_trans_2}}
+  \end{figure}
+
+  
+  \chapter{23 de outubro - Propriedades I - }
+    
+  \section{Linearidade}
+  
+Dadas duas funções $f(t)$ e $g(t)$ com transformadas de Fourier $F(w)$ e $G(w)$, respectivamente, e $\alpha$ e $\beta$ duas constantes reais ou complexas, então
+\begin{equation}
+\mathcal{F}\left\{\alpha f(t)+\beta g(t)\right\}=\alpha \mathcal{F}\{ f(t)\}+\beta\mathcal{F}\{ g(t)\}=\alpha F(w)+\beta G(w)
+\end{equation}
+  
+  \section{Derivada}
+   Dada uma função diferenciável $f(t)$ tal que 
+\begin{equation}\lim_{t\to \pm \infty}f(t)=0
+\end{equation}
+e sua transformada de Fourier $F(w)$, então
+\begin{equation}
+\mathcal{F}\{f'(t)\}=iw F(w)
+\end{equation}
+
+\subsection{Exemplo}
+ Considere a função $f(t)=e^{-at^2}$, $a>0$, e sua transformada de Fourier:
+\begin{equation}
+F(w)=\frac{\sqrt{\pi}}{\sqrt{a}}e^{-\frac{w^2}{4a}}
+\end{equation}
+Usando a propriedade da derivada, a transformada de Fourier da derivada $f'(t)=-2 a t e^{-at^2}$ é dada por:
+\begin{equation}
+\mathcal{F}\{-2 a t e^{-at^2} \}=iwF(w)=iw\frac{\sqrt{\pi}}{\sqrt{a}}e^{-\frac{w^2}{4a}}.
+\end{equation}
+Usando a linearidade, encontramos a transformada de Fourier da função $t e^{-at^2}$:
+\begin{equation}
+\mathcal{F}\{  t e^{-at^2} \}=-iw\frac{\sqrt{\pi}}{2a\sqrt{a}}e^{-\frac{w^2}{4a}}.
+\end{equation}
+
+% 
+% 
+\section{Deslocamento no eixo $w$} Dada uma função $f(t)$ e sua transformada de Fourier $F(w)$, então
+ \begin{equation}
+ \mathcal{F}\left\{e^{at}f(t)\right\}=F(w+ia).
+ \end{equation}
+
+ De fato,
+ \begin{eqnarray*}
+ \mathcal{F}\left\{e^{at}f(t)\right\}&=&\int_{-\infty}^\infty  f(t)e^{at}e^{-iwt}dt \\
+ &=&\int_{-\infty}^\infty   f(t)e^{(a-iw)t}dt \\
+ &=&\int_{-\infty}^\infty   f(t)e^{-i(ia+w)t}dt \\
+ &=&F(w+ia) 
+ \end{eqnarray*}
+
+A transformada de Fourier da função $f(t)=t e^{-at^2}$, $a>0$, é dada por
+ \begin{equation}
+ F(w)=-iw\frac{\sqrt{\pi}}{2a\sqrt{a}}e^{-\frac{w^2}{4a}}.
+ \end{equation}
+ Logo, a transformada $G(w)$ da função $g(t)=t e^{bt-at^2}$, $b>0$, é dada por
+ \begin{eqnarray*}
+ G(w)=\mathcal{F}\left\{t e^{bt-at^2}\right\}&=&\mathcal{F}\left\{e^{bt}t e^{-at^2}\right\}\\
+ &=&F(w+ib)\\
+ &=&-i(w+ib)\frac{\sqrt{\pi}}{2a\sqrt{a}}e^{-\frac{(w+ib)^2}{4a}}\\
+ &=&(b-iw)\frac{\sqrt{\pi}}{2a\sqrt{a}}e^{-\frac{w^2+2wib-b^2}{4a}}\\
+ &=&\sqrt{w^2+b^2}e^{-i\arctan\left(\frac{w}{b}\right)}\frac{\sqrt{\pi}}{2a\sqrt{a}}e^{-\frac{w^2-b^2}{4a}}e^{-i\left(\frac{wb}{2a}\right)}\\
+ &=&\sqrt{w^2+b^2}\frac{\sqrt{\pi}}{2a\sqrt{a}}e^{-\frac{w^2-b^2}{4a}}e^{-i\left(\frac{wb}{2a}+\arctan\left(\frac{w}{b}\right)\right)}\\
+ &=&|G(w)|e^{i\phi(w)},
+ \end{eqnarray*}
+ onde
+ \begin{eqnarray*}
+ |G(w)|=\frac{\sqrt{\pi}}{2a\sqrt{a}}e^{-\frac{b^2}{4a}}\sqrt{w^2+b^2}e^{-\frac{w^2}{4a}}\qquad\hbox{ e }\qquad \phi(w)=-\left(\frac{wb}{2a}+\arctan\left(\frac{w}{b}\right)\right)
+ \end{eqnarray*}
+ Veja os diagramas de espectro de $G(w)$ quando $a=b=1$ na figura.
+ \begin{figure}[!ht]
+ \begin{center}
+ \includegraphics{figs/cap_propriedades_transformada_figura_2}
+ \includegraphics{figs/cap_propriedades_transformada_figura_3}\end{center}
+ \caption{\label{diag_espec_trans_4}}
+ \end{figure}
+
+\section{Deslocamento no eixo $t$}
+
+Dada uma função $f(t)$ e sua transformada de Fourier $F(w)$, então
+ \begin{equation}
+ \mathcal{F}\left\{f(t-a)\right\}=e^{-iaw}F(w).
+ \end{equation}
+ 
+ De fato,
+ \begin{eqnarray*}
+ \mathcal{F}\left\{f(t-a)\right\}&=&\int_{-\infty}^\infty  f(t-a)e^{-iwt}dt \\
+ &=&\int_{-\infty}^\infty  f(s)e^{-iw(s+a)}ds \\
+ &=&\int_{-\infty}^\infty  f(s)e^{-iwa}e^{-iws}ds \\
+ &=&e^{-iwa}\int_{-\infty}^\infty  f(s)e^{-iws}ds \\
+ &=&e^{-iaw}F(w)
+ \end{eqnarray*}
+
+ 
+A transformada de Fourier da função $f(t)=e^{-|t|}$ é dada por $F(w)=\frac{2}{w^2+1}$. Logo, a transformada de Fourier da função $g(t)=e^{-|t-2|}$ é
+ \begin{equation}
+ G(w)=\frac{2}{w^2+1}e^{-2iw}
+ \end{equation}
+
+  {\bf Obs:} Um deslocamento real no tempo não altera o módulo da transformada de Fourier, pois $|e^{-iaw}|=1$ sempre que $a$ e $w$ são reais.
+
+\section{Transformada da integral}
+  Dada uma função integrável $f(t)$ tal que sua transformada de Fourier $F(w)$ satisfaça $F(0)=0$, então
+   \begin{equation}
+ \mathcal{F}\left\{\int_{-\infty}^t f(\tau)d\tau \right\}=\frac{1}{iw}F(w).
+ \end{equation}
+
+{\bf Dem:}
+ Definimos $g(t)=\int_{-\infty}^t f(\tau)d\tau$ e, usando o teorema fundamental do cálculo, temos $g'(t)=f(t)$. Aplicamos a transformada de Fourier na igualdade e temos:
+ \begin{equation}
+ \mathcal{F}\{g'(t)\}=\mathcal{F}\{f(t)\},
+ \end{equation}
+ ou seja,
+ \begin{equation}
+ \mathcal{F}\{g'(t)\}=F(w).
+ \end{equation}
+ Observe que
+ \begin{equation}
+ \lim_{t\to\infty} g(t)=\int_{-\infty}^\infty f(\tau)d\tau=\int_{-\infty}^\infty f(\tau)e^{i\cdot 0 \cdot \tau}d\tau=F(0)=0
+ \end{equation}
+ e
+ \begin{equation}
+ \lim_{t\to-\infty} g(t)=\int_{-\infty}^{-\infty} f(\tau)d\tau=0,
+ \end{equation}
+ portanto, podemos usar a propriedade \ref{prop_der} da transformada de Fourier da derivada e obter:
+ \begin{equation}
+ \mathcal{F}\{g'(t)\}=iw \mathcal{F}\{g(t)\}.
+ \end{equation}
+ Assim,
+ \begin{equation}
+ F(w)=iw \mathcal{F}\left\{\int_{-\infty}^t f(\tau)d\tau\right\}.
+ \end{equation}
+ Portanto,
+ \begin{equation}
+ \mathcal{F}\left\{\int_{-\infty}^t f(\tau)d\tau\right\}=\frac{1}{iw}F(w).
+ \end{equation}
+
+\section{Teorema da modulação}\label{prop_mod}
+Dada uma função $f(t)$ e sua transformada de Fourier $F(w)$, então
+ \begin{equation}
+ \mathcal{F}\left\{f(t)\cos(w_0t) \right\}=\frac{1}{2}F(w-w_0)+\frac{1}{2}F(w+w_0),
+ \end{equation}
+ para $w_0\in\mathbb{R}$.
+
+{\bf Dem}
+ De fato,
+ \begin{eqnarray*}
+ \mathcal{F}\left\{f(t)\cos(w_0t) \right\}&=&\mathcal{F}\left\{f(t)\left(\frac{e^{iw_0t}+e^{-iw_0t}}{2} \right)\right\} \\
+ &=&\int_{-\infty}^\infty f(t)\frac{e^{iw_0t}+e^{-iw_0t}}{2}e^{-iwt}dt  \\
+ &=&\frac{1}{2}\int_{-\infty}^\infty f(t)e^{-i(w-w_0)t}dt+\frac{1}{2}  \int_{-\infty}^\infty f(t)e^{-i(w_0+w)t}dt\\
+ &=&\frac{1}{2}F(w-w_0)+\frac{1}{2}F(w+w_0)
+ \end{eqnarray*}
+
+{\bf Exemplo:} Considere a função $f(t)=\cos(w_0t) e^{-a|t|}$, $a>0$. Podemos obter a transformada de Fourier de $f(t)$ a partir da transformada de Fourier da função $g(t)=e^{-a|t|}$. Basta aplicar o teorema da modulação à função $g(t)$, cuja transformada de Fourier é dada por $G(w)=\frac{2a}{w^2+a^2}$:
+ \begin{eqnarray*}
+ \mathcal{F}\left\{g(t)\cos(w_0t) \right\}&=&\frac{1}{2}G(w-w_0)+\frac{1}{2}G(w+w_0)\\
+ &=&\frac{1}{2}\frac{2a}{(w-w_0)^2+a^2}+\frac{1}{2}\frac{2a}{(w+w_0)^2+a^2}\\
+ &=&\frac{a}{(w-w_0)^2+a^2}+\frac{a}{(w+w_0)^2+a^2}
+ \end{eqnarray*}
+
+ \chapter{26 de outubro - Propriedades}
+%\section{Teorema da convolução}
+%\label{prop_teo_conv} Dadas duas funções $f_1(t)$ e $f_2(t)$ com suas respectivas transformadas de Fourier, $F_1(w)$ e $F_2(w)$, então
+% \begin{itemize}
+% \item[a)] (Convolução no tempo)
+% \begin{equation}\mathcal{F}\{(f_1*f_2)(t)\}=F_1(w)F_2(w),\end{equation}
+% \item[b)] (Convolução na frequência)
+% \begin{equation}(F_1*F_2)(w)=2\pi\mathcal{F}\{f_1(t)f_2(t)\}\end{equation}
+% ou 
+% \begin{equation}\mathcal{F}^{-1}\{(F_1*F_2)(w)\}=2\pi f_1(t)f_2(t),\end{equation}
+% \end{itemize}
+% onde $*$ indica a convolução de duas funções:
+% \begin{equation}
+% (f_1*f_2)(t)=\int_{-\infty}^\infty f_1(\tau)f_2(t-\tau)d\tau
+% \end{equation}
+% \end{teo}
+% \begin{proof}
+% \begin{itemize}
+% \item[a)] Usando as definições de transformada de Fourier e convolução de duas funções, temos:
+% \begin{eqnarray}
+% \nonumber \mathcal{F}\{(f_1*f_2)(t)\}&=&\int_{-\infty}^\infty (f_1*f_2)(t)e^{-iwt}dt\\
+% \nonumber &=&\int_{-\infty}^\infty \left(\int_{-\infty}^\infty f_1(\tau)f_2(t-\tau)d\tau\right)e^{-iwt}dt\\
+% &=&\int_{-\infty}^\infty \left[f_1(\tau) \int_{-\infty}^\infty f_2(t-\tau)e^{-iwt}dt\right]d\tau  {\label{eq_teo_conv}}
+% \end{eqnarray}
+% Uma das integrais pode ser calculada fazendo uma mudança de variável:
+% \begin{eqnarray}
+% \nonumber \int_{-\infty}^\infty f_2(t-\tau)e^{-iwt}dt&=&\int_{-\infty}^\infty f_2(s)e^{-iw(s+\tau)}ds \\
+% \nonumber &=&e^{-iw\tau}\int_{-\infty}^\infty f_2(s)e^{-iws}ds \\
+% &=&e^{-iw\tau}F_2(w) {\label{eq_teo_conv_1}}
+% \end{eqnarray}
+% Substituindo a equação (\ref{eq_teo_conv_1}) na equação (\ref{eq_teo_conv}), temos
+% \begin{eqnarray*}
+% \mathcal{F}\{(f_1*f_2)(t)\}&=&\int_{-\infty}^\infty \left[f_1(\tau) \int_{-\infty}^\infty f_2(t-\tau)e^{-iwt}dt\right]d\tau\\
+% &=&\int_{-\infty}^\infty \left[f_1(\tau) e^{-iw\tau}F_2(w)\right]d\tau\\
+% &=&F_2(w)\int_{-\infty}^\infty \left[f_1(\tau) e^{-iw\tau}\right]d\tau\\
+% &=&F_1(w)F_2(w)
+% \end{eqnarray*}
+% \item[b)] Analogamente, usando as definições, temos:
+% \begin{eqnarray}
+% \nonumber\mathcal{F}^{-1}\{(F_1*F_2)(w)\}&=&\frac{1}{2\pi}\int_{-\infty}^\infty (F_1*F_2)(w)e^{iwt}dw\\
+% \nonumber &=&\frac{1}{2\pi}\int_{-\infty}^\infty \left(\int_{-\infty}^\infty F_1(v)F_2(w-v)dv \right)e^{iwt}dw\\
+% &=&\frac{1}{2\pi}\int_{-\infty}^\infty\left[ F_1(v) \int_{-\infty}^\infty F_2(w-v)e^{iwt}dw \right]dv {\label{eq_teo_conv_2}}
+% \end{eqnarray}
+% Também,
+% \begin{eqnarray}
+% \nonumber \int_{-\infty}^\infty F_2(w-v)e^{iwt}dw&=&\int_{-\infty}^\infty F_2(y)e^{i(y+v)t}dy \\
+% \nonumber &=&e^{ivt}\int_{-\infty}^\infty F_2(y)e^{iyt}dy \\
+% &=&2\pi e^{ivt}f_2(t) {\label{eq_teo_conv_3}}
+% \end{eqnarray}
+% Substituindo a equação (\ref{eq_teo_conv_3}) na equação (\ref{eq_teo_conv_2}), temos
+% \begin{eqnarray*}
+% \mathcal{F}^{-1}\{(F_1*F_2)(w)\}&=&\frac{1}{2\pi}\int_{-\infty}^\infty\left[ F_1(v) \int_{-\infty}^\infty F_2(w-v)e^{iwt}dw \right]dv\\
+% &=&\frac{1}{2\pi}\int_{-\infty}^\infty  F_1(v) e^{ivt} 2\pi f_2(t) dv\\
+% &=&f_2(t)\int_{-\infty}^\infty F_1(v) e^{ivt} dv\\
+% &=&2\pi f_1(t)f_2(t)
+% \end{eqnarray*}
+% \end{itemize}
+% \end{proof}
+% \begin{ex}Considere as funções $f(t)=te^{-t^2}$ e $g(t)=e^{-a|t|}$, $a>0$ e suas respectivas transformadas de Fourier $F(w)=-iw\frac{\sqrt{\pi}}{2}e^{-\frac{w^2}{4}}$ e $G(w)=\frac{2a}{w^2+a^2}$. A transformada de Fourier da função 
+% \begin{equation}
+% h(t)=\int_{-\infty}^\infty f(t-\tau)g(\tau)d\tau=\int_{-\infty}^\infty (t-\tau)e^{-(t-\tau)^2}e^{-a|\tau|}d\tau
+% \end{equation}
+% é calculada usando o teorema da convolução e é dada por
+% \begin{equation}
+% H(w)=F(w)G(w)=-iwa\frac{\sqrt{\pi}}{w^2+a^2}e^{-\frac{w^2}{4}}
+% \end{equation}
+% \end{ex}
+% \begin{teo}[Conjugação] \label{prop_conj}Dada uma função real $f(t)$ e sua transformada de Fourier $F(w)$, então
+% \begin{equation}
+% \overline{F(w)}=F(-w)
+% \end{equation}
+% \end{teo}
+% \begin{proof}
+% De fato,
+% \begin{eqnarray*}
+% \overline{F(w)}&=&\overline{\int_{-\infty}^\infty f(t)e^{-iwt}dt}\\
+% &=&\int_{-\infty}^\infty f(t)\overline{e^{-iwt}}dt,\quad \hbox{pois}\ \ \overline{f(t)}=f(t) \\
+% &=&\int_{-\infty}^\infty f(t)e^{iwt}dt\\
+% &=&\int_{-\infty}^\infty f(t)e^{-i(-w)t}dt\\
+% &=&F(-w)
+% \end{eqnarray*}
+% \end{proof}
+% \begin{obs} Se $f(t)$ não é uma função real, esta propriedade não se aplica.
+% \end{obs}
+% \begin{ex}Considere as funções $f(t)=te^{-t^2}$ e sua transformada de Fourier $F(w)=-iw\frac{\sqrt{\pi}}{2}e^{-\frac{w^2}{4}}$. Então,
+% \begin{equation}
+% F(-w)=iw\frac{\sqrt{\pi}}{2}e^{-\frac{w^2}{4}}
+% \end{equation}
+% e
+% \begin{equation}
+% \overline{F(w)}=\overline{-iw\frac{\sqrt{\pi}}{2}e^{-\frac{w^2}{4}}}=iw\frac{\sqrt{\pi}}{2}e^{-\frac{w^2}{4}}.
+% \end{equation}
+% \end{ex}
+% \begin{teo}[Inversão temporal]\label{prop_inv_temp} Dada uma função $f(t)$ e sua transformada de Fourier $F(w)$, então \begin{equation}\mathcal{F}\left\{f(-t)\right\}=F(-w).\end{equation}
+% \end{teo}
+% \begin{proof}
+% \begin{eqnarray*}
+% \mathcal{F}\left\{f(-t)\right\}=\int_{-\infty}^\infty f(-t) e^{-iwt}dt
+% \end{eqnarray*}
+% procedemos com a mudança de variáveis $\tau=-t$:
+% \begin{eqnarray*}
+% \mathcal{F}\left\{f(-t)\right\}&=&\int_{-\infty}^\infty f(-t) e^{-iwt}dt\\
+% &=&\int_{\infty}^{-\infty} f(\tau) e^{iw\tau}(-d\tau) \\
+% &=&\int_{-\infty}^{\infty} f(\tau) e^{iw\tau}d\tau \\
+% &=&\int_{-\infty}^{\infty} f(\tau) e^{-i(-w)\tau}d\tau \\
+% &=&F(-w)
+% \end{eqnarray*}
+% \end{proof}
+% \begin{teo}[Simetria ou dualidade]\label{prop_sim_dua} Dada uma função $f(t)$ e sua transformada de Fourier $F(w)$, então 
+% \begin{equation}
+% f(-w)=\frac{1}{2\pi}\mathcal{F}\{F(t)\}
+% \end{equation}
+% \end{teo}
+% \begin{proof} Da definição de transformada de Fourier, temos
+% \begin{equation}
+% f(t)=\frac{1}{2\pi}\int_{-\infty}^{\infty} F(w)e^{iwt}dw
+% \end{equation}
+% Podemos trocas $t$ e $w$ e calcular $f(w)$ em função de $F(t)$:
+% \begin{equation}
+% f(w)=\frac{1}{2\pi}\int_{-\infty}^{\infty} F(t)e^{itw}dt.
+% \end{equation}
+% Ou seja, 
+% \begin{equation}
+% f(-w)=\frac{1}{2\pi}\int_{-\infty}^{\infty} F(t)e^{-itw}dt=\frac{1}{2\pi}\mathcal{F}\{F(t)\}.
+% \end{equation}
+% \end{proof}
+% \begin{teo}[Mudança de escala]\label{prop_mud_esc} Dada uma função $f(t)$ e sua transformada de Fourier $F(w)$, então 
+% \begin{equation}
+% \mathcal{F}\{f(at)\}=\frac{1}{|a|}F\left(\frac{w}{a}\right),~~ \forall a\neq 0.
+% \end{equation}
+% \end{teo}
+% \begin{proof} Da definição de transformada de Fourier, temos
+% \begin{equation}
+% \mathcal{F}\{f(at)\}=\int_{-\infty}^{\infty} f(at)e^{-iwt}dt
+% \end{equation}
+% Fazendo a mudança $\tau= at$, distinguindo dois casos: $a>0$ e $a<0$.
+% Para o caso $a>0$, temos:
+% \begin{eqnarray*}
+% \mathcal{F}\{f(at)\}&=&\int_{-\infty}^{\infty} f(at)e^{-iwt}dt\\
+% &=&\int_{-\infty}^{\infty} f(\tau)e^{-\frac{iw\tau}{a}}\frac{d\tau}{a}\\
+% &=&\frac{1}{a}\int_{-\infty}^{\infty} f(\tau)e^{-\frac{iw\tau}{a}}d\tau
+% \end{eqnarray*}
+% Para o caso $a<0$, temos:
+% \begin{eqnarray*}
+% \mathcal{F}\{f(at)\}&=&\int_{-\infty}^{\infty} f(at)e^{-iwt}dt\\
+% &=&\int_{\infty}^{-\infty} f(\tau)e^{-\frac{iw\tau}{a}}\frac{d\tau}{a}\\
+% &=&-\frac{1}{a}\int_{-\infty}^{\infty} f(\tau)e^{-\frac{iw\tau}{a}}d\tau
+% \end{eqnarray*}
+% Em ambos os casos, temos:
+% \begin{eqnarray*}
+% \mathcal{F}\{f(at)\}&=&\frac{1}{|a|}\int_{-\infty}^{\infty} f(\tau)e^{-\frac{iw\tau}{a}}d\tau\\
+% &=&\frac{1}{|a|}F\left(\frac{w}{a}\right)
+% \end{eqnarray*}
+% \end{proof}
+% \begin{obs} A propriedade da inversão temporal (propriedade \ref{prop_inv_temp}) é um caso particular desta propriedade quando $a=-1$.
+% \end{obs}
+% \subsection*{Exercícios}
+% \begin{exer}O diagrama de magnitudes da transformada de Fourier $F(w)$ de uma função $f(t)$ é dado na figura (\ref{fig_graf_1}). Esboce o diagrama de magnitudes da transformada de Fourier da função $f'(t)$. 
+% \begin{figure}[!ht]
+% \begin{center}
+% \includegraphics{cap_propriedades_transformada/pics/figura_1}\end{center}
+% \caption{\label{fig_graf_1}}
+% \end{figure}
+% \end{exer}
+% \begin{exer}Faça o diagrama de espectro da transformada de Fourier do exemplo \ref{ex_desloc_tempo} da página \pageref{ex_desloc_tempo}.
+% \end{exer}
+% \begin{resp}Ver figura abaixo.
+% \begin{center}
+% \includegraphics{cap_propriedades_transformada/pics/figura_11}
+% \includegraphics{cap_propriedades_transformada/pics/figura_12}\end{center}
+% \end{resp}
+% \begin{exer} Em geral não é verdade que módulo da soma é igual a soma dos módulos, isto é, $|x+y|=|x|+|y|$, $x,y\in\mathbb{C}$.
+% \begin{itemize}
+% \item[a)] Encontre um caso particular onde $|x+y|=|x|+|y|$ com $|x|\neq 0$ e $|y|\neq 0$.
+% \item[b)] Encontre um caso particular onde $|x+y|=0$ com $|x|\neq 0$ e $|y|\neq 0$. Mostre que, nesse caso, $x=-y$.
+% \item[c)] Encontre um caso particular onde $|x+y|=1$ com $|x|=|y|=1$.
+% \item[d)] Mostre que $|x+y|=|x|+|y|$ sempre que $xy=0$.
+% \end{itemize}
+% Observe que não é possível, em geral, conhecer o diagrama de magnitudes da soma de duas funções, $F(w)$ e $G(w)$, conhecendo apenas seus diagramas de magnitudes. As fases precisam ser levadas em conta. Um exceção é quando, para todos $w$, ou $F(w)=0$ ou $G(w)=0$.
+% \end{exer}
+% \begin{exer}{\label{ex_mod_sin}}Mostre que, dada uma função $f(t)$ e sua transformada de Fourier $F(w)$, então
+% \begin{equation}
+% \mathcal{F}\left\{f(t)\sen(w_0t) \right\}=\frac{i}{2}F(w+w_0)-\frac{i}{2 }F(w-w_0),
+% \end{equation}
+% para $w_0\in\mathbb{R}$.
+% \end{exer}
+ \end{document}
